--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,3 +1,14 @@
+.dots {
+  margin: 0 auto;
+}
+.dot {
+  height: 5px;
+  width: 5px;
+  background-color: #F8F8FF;
+  border-radius: 50%;
+  display: inline-block;
+}
+
 .main-container {
   width: 400px;
   max-width: 80%;
@@ -14,13 +25,15 @@
 .main-container a {
   /* border: 1px solid black; */
   border-radius: 20px;
+  border: 2px solid hsl(240, 100%, 99%,0.33);
   padding: 5px;
 
   text-decoration: none;
+  font-size: large;
   color: #F8F8FF;
 
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto 1fr auto;
   grid-template-rows: 1fr;
 
   align-items: center;
@@ -33,11 +46,16 @@
 }
 
 .icon img {
-  width: 30px;
+  width: 20px;
   margin: 0 10px;
 }
 
 .label {
   display: grid;
   justify-content: center;
+}
+
+.title {
+  margin: 0 auto;
+  text-align: center;
 }
