--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     max-width: 80vw;
-    margin: 2rem auto;
+    margin: 2rem auto 1rem;
 }
 
 .logo {
