--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -7,12 +7,13 @@
   background-color: #F8F8FF;
   border-radius: 50%;
   display: inline-block;
+  margin: 0 10px;
 }
 
 .main-container {
   width: 400px;
   max-width: 80%;
-  margin: 2rem auto;
+  margin: 1rem auto;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -25,8 +26,10 @@
 .main-container a {
   /* border: 1px solid black; */
   border-radius: 20px;
-  border: 2px solid hsl(240, 100%, 99%,0.33);
+  border: 3px solid hsl(140, 52%, 55%, 0);
   padding: 5px;
+  background-color: hsla(255, 96%, 47%, 0.25);
+  box-shadow: 0px 3px 5px hsl(220, 15%, 12%, 0);
 
   text-decoration: none;
   font-size: large;
@@ -37,12 +40,16 @@
   grid-template-rows: 1fr;
 
   align-items: center;
+
+  transition: border 0.5s linear, font-weight 0.5s linear, background-color 0.5s linear, box-shadow 1s linear;
 }
 
 .main-container a:hover {
-  border: 2px solid #F8F8FF;
+  border: 3px solid #50C878;
   font-weight: 700;
-  background-color: #3f05ec85;
+  background-color: hsla(255, 96%, 47%, 0.5);
+  box-shadow: 0px 3px 5px hsl(220, 15%, 12%, 0.5);
+
 }
 
 .icon img {
