--- a/css/footerstyle.css
+++ b/css/footerstyle.css
@@ -2,13 +2,27 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fill, minmax(0, 1fr));
-    margin: 40px auto;
+    gap: 1rem;
+    margin: 0 auto;
+    padding: 2rem 0;
     max-width: 60%;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.footer-container p{
+.footer-container p {
     margin: 0;
+}
+
+.footer-container a {
+    color: var(--light);
+    font-weight: 700;
+    text-decoration-color: var(--dark-lighter);
+}
+
+.footer-container a:hover {
+    color: var(--second);
+    font-weight: 900;
+
 }
