--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,24 +1,12 @@
-.dots {
-  margin: 0 auto;
-}
-.dot {
-  height: 5px;
-  width: 5px;
-  background-color: #F8F8FF;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 0 10px;
-}
-
 .main-container {
   width: 400px;
   max-width: 80%;
-  margin: 1rem auto;
+  margin: 0 auto;
 
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(auto-fill, minmax(0, 1fr));
-  grid-gap: 10px;
+  gap: 10px;
 
   align-items: center;
 }
@@ -26,12 +14,12 @@
 .main-container a {
   /* border: 1px solid black; */
   border-radius: 20px;
-  border: 3px solid hsl(140, 52%, 55%, 0);
+  border: 1px solid hsl(140, 52%, 55%, 0);
   padding: 5px;
-  background-color: hsla(255, 96%, 47%, 0.25);
-  box-shadow: 0px 3px 5px hsl(220, 15%, 12%, 0);
+  background-color: var(--main);
 
   text-decoration: none;
+  font-weight: 500;
   font-size: large;
   color: #F8F8FF;
 
@@ -41,15 +29,13 @@
 
   align-items: center;
 
-  transition: border 0.5s linear, font-weight 0.5s linear, background-color 0.5s linear, box-shadow 1s linear;
+  transition: border 0.33s linear, font-weight 0.33s linear, background-color 0.33s linear;
 }
 
 .main-container a:hover {
-  border: 3px solid #50C878;
-  font-weight: 700;
-  background-color: hsla(255, 96%, 47%, 0.5);
-  box-shadow: 0px 3px 5px hsl(220, 15%, 12%, 0.5);
-
+  border: 1px solid #50C878;
+  font-weight: 300;
+  background-color: var(--dark);
 }
 
 .icon img {
